<resources>
    <string name="listItemProductTitle">Product title</string>
    <string name="listItemProductPrice">€ 00.00</string>
    <string name="listItemProductAvailability">product-availability</string>
    <string name="productDetailTitleTextView">TextView</string>
    <string name="productDetailsPriceTextView">€ 00.00</string>
    <string name="ProductDetailsAvailabilityTextView">product-availability</string>
    <string name="productDetailsDescriptionTextView">productDetails description</string>
    <string name="productdetailsDescription">Description:</string>
    <string name="productDetailsQuantity">Quantity:</string>
    <string name="productDetailsQuantityEditText">1</string>
    <string name="productDetailsSpecs">Specs: </string>
    <string name="app_name">Android_Spotshop</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="product_image_detailview">Product image detailView</string>
    <string name="add_to_cart_button">add to cart button</string>
    <string name="homepage_zoek_image_button">homepage zoek image button</string>
    <string name="homepage_zoek_via_tekst_button">homepage zoek via tekst button</string>
    <string name="logo_spotshot">logo spotshot</string>
    <string name="listview_product_image">listview product image</string>
    <string name="drawer_logo_afbeelding">drawer logo afbeelding</string>
    <string name="shoppingCartProducts">Products:</string>
    <string name="shoppingCartPriceTextView">00.00 USD</string>
    <string name="plusButtonSB">+</string>
    <string name="minusButtonSB">-</string>
    <string name="priceSB">00.00 USD</string>
    <string name="titleSB">test</string>
    <string name="sbquantity">1</string>
    <string name="reviewPageShippingMeth"><b>Shipping:</b></string>
    <string name="reviewPagePaymentMeth"><b>Payment:</b></string>
    <string name="reviewPageItems"><b>Items:</b></string>
    <string name="reviewPageShippingAddress"><b>Shipping address</b></string>
    <string name="reviewPageInvoiceAddress"><b>Invoice address</b></string>
    <string name="shoppingbasketlistitemimage">ShoppingBasketListItemImage</string>
    <string name="shoppingbasket_check_out_button">ShoppingBasket check-out button</string>
    <string name="you_will_receive_a_confirmation_email_shortly">you will receive a confirmation email shortly.</string>
    <string name="your_order_has_been_made">Your order has been made.</string>
    <string name="congratulations">Congratulations !</string>
    <string name="checkout_icon">checkout icon</string>
    <string name="successfull_icon">successfull icon</string>
    <string name="number">{Number}</string>
    <string name="shippingmethod">{ShippingMethod}</string>
    <string name="paymentmethod">{PaymentMethod}</string>
    <string name="name">name</string>
    <string name="street">street</string>
    <string name="postcode">postcode</string>
    <string name="nameinvoice">name</string>
    <string name="invoiceStreet">street</string>
    <string name="invoicepostcode">postcode</string>

</resources>
