<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:weightSum="14"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_weight="13">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/product_image_detailview"
                app:srcCompat="@drawable/ic_button_camera"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/productDetailsImageView">
            </ImageView>

            <TextView
                android:text="@string/productDetailTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/productDetailsTitleTextView"
                android:textSize="20sp"
                tools:textStyle="bold"
                android:textColor="@color/colorPrimary" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productDetailsRatingBar"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productdetailsDescription"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="0dp">
                <TextView
                    android:text="@string/productDetailsDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/productDetailsDescriptionTextView"
                    android:textSize="14sp" />
            </android.support.v4.widget.NestedScrollView>


            <TextView
                android:text="@string/productDetailsPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productDetailsPriceTextView"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:text="@string/ProductDetailsAvailabilityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productDetailsAvailabilityTextView"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productDetailsSpecs"
                android:textSize="14sp"
                android:layout_marginTop="10dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productDetailsSpecsTable"
                android:layout_marginTop="10dp">
            </TableLayout>

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:windowSoftInputMode="adjustResize"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantity"
        android:textSize="14sp"
        android:text="@string/productDetailsQuantity"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="number"
        android:id="@+id/productDetailsQuantityEditText"
        android:text="@string/productDetailsQuantityEditText"
        android:layout_toRightOf="@id/quantity"
        android:maxLength="6"
        android:gravity="top"

        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:contentDescription="@string/add_to_cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_to_cart"
        android:id="@+id/productDetailsAddToCartButton"
        android:layout_centerInParent="true"
        android:background="@color/colorWhite"
        tools:ignore="RtlHardcoded" />

    </RelativeLayout>

</LinearLayout>
