<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_detaisl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.fenego.android_spotshop.productDetails.ProductDetailsActivity">

    <android.support.v4.view.ViewPager android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:id="@+id/productImageViewPager">
    </android.support.v4.view.ViewPager>

    <TextView
        android:text="@string/productDetailTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productImageViewPager"
        android:textAlignment="center"
        android:id="@+id/productDetailsTitleTextView"
        android:textSize="24sp"
        android:layout_margin="10dp"
        tools:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productDetailsTitleTextView"
        android:id="@+id/description"
        android:text="@string/productdetailsDescription"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <TextView
        android:text="@string/productDetailsDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:id="@+id/productDetailsDescriptionTextView"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <TextView
        android:text="@string/productDetailsPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productDetailsDescriptionTextView"
        android:id="@+id/productDetailsPriceTextView"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textStyle="bold|italic" />

    <TextView
        android:text="@string/ProductDetailsAvailabilityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productDetailsPriceTextView"
        android:id="@+id/productDetailsAvailabilityTextView"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productDetailsAvailabilityTextView"
        android:id="@+id/quantity"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/productDetailsQuantity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/productDetailsAvailabilityTextView"
        android:layout_toRightOf="@+id/quantity"
        android:id="@+id/productDetailsQuantityEditText"
        android:text="@string/productDetailsQuantityEditText" />

    <Button
        android:text="@string/productDetailsAddToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productDetailsQuantityEditText"
        android:layout_centerHorizontal="true"
        android:id="@+id/productDetailsAddToCartButton"
        android:layout_margin="0dp"/>


</RelativeLayout>
